Stretch - Fixed Navigation.

--- a/css/index.css
+++ b/css/index.css
@@ -185,6 +185,10 @@ a {
   background-color: #f6f6f6;
   color: #454a59;
   border: 1px solid #f1f1f1;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 @media (max-width: 500px) {
   .nav {
@@ -219,6 +223,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  padding-top: 130px;
 }
 .home .intro img {
   border-radius: 0.5rem;
