--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,9 @@
 // Home Content
 
 .home {
+  // STRETCH - Fixed Navigation Bar
+  padding-top: 130px;
+
   .intro {
     img {
       border-radius: 0.5rem;
