--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,12 @@
   .nav-align();
   .nav-styles(@nav-bg, @nav-font);
 
+  // STRETCH - Fixed Navigation Bar
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+
   @media @phone {
     max-width: 500px;
   }
